# Classes

LING300/: Homework1.tex  Homework10.tex  Homework13.tex  Homework2.tex  Homework3.tex  Homework4.tex  Homework5.tex  Homework6.tex  Homework8.tex  Homework9.tex  WordOrder.tex  WordOrderCitations.tex
LING300/Diagrams/: 3_1_a.graffle  3_1_b.graffle  3_1_c.graffle  3_1_d.graffle  3_1_e.graffle  3_1_g.graffle  3_4_a.graffle  3_4_b.graffle  3_4_c.graffle  3_4_d.graffle  3_4_e.graffle  3_4_f.graffle  3_4_g.graffle  3_4_h.graffle  3_4_i.graffle  3_4_j.graffle  3_6_61.graffle  3_6_62.graffle  3_8_a1.graffle  3_8_a2.graffle  3_8_b1.graffle  3_8_b2.graffle  4_16_b.graffle  4_16_c.graffle  4_16_d.graffle  4_1_f.graffle  4_1_g.graffle  4_1_h.graffle  WordOrder1.graffle  WordOrder2.graffle  WordOrder3.graffle  WordOrder4.graffle
cs352/: ext.c  external.c  int.c  internal.c
cs352/Homework1/: Homework1.tex
cs352/Homework2/: Homework2.tex
cs352/Homework2/java/edu/arizona/cs352/: Prog1c.java
cs352/Homework3/: Homework3.tex
cs352/prog02/: logging.h  prog02p2.c  prog02p3  prog02p3.c
cs352/prog03/: octal.txt  prog03p2  prog03p2.c  prog03p2.h  text.txt
cs352/prog04/: logging.h  prog04p1.bsh  prog04p2.bsh  prog04p3.c  prog04p3.h
cs352/prog05/: logging.c  prog05p1.bsh  prog05p2.c  prog05p2.h
cs352/prog06/: prog04p3.c  prog06.txt  prog06p5.bsh  shell.tex  someshell  tex2pdf7.bsh
cs352/prog07/: prog07.c  prog07.h
cs352/prog08/: image2.txt  prog08.c  prog08.h
cs352/prog09/: ferrari.art  image.pcx  image.txt  prog09.c  prog09.h
cs352/prog10/: Makefile  Makefile.am  README  configure.ac
cs352/prog10/src/: Makefile.am  linkedlist.c  linkedlist.h  logging.h  prog10.c  prog10.h
cs352/prog11/: COPYING  INSTALL  Makefile  Makefile.am  README  configure  configure.ac  testdata.txt
cs352/prog11/autom4te.cache/: output.1  traces.0  traces.1
cs352/prog11/src/: Makefile.am  hash.c  hash.h  logging.h  orthogonal.c  orthogonal.h  prog11.c  prog11.h
