#
# Copyright 2011 Leo Przybylski
#
# Educational Community License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License. You may
# obtain a copy of the License at
#
# http://www.osedu.org/licenses/ECL-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an "AS IS"
# BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing
# permissions and limitations under the License.
#


PROGRAM_LOG_LEVEL=3
#AM_CFLAGS = $(DEPS_CFLAGS)
AM_CFLAGS = $(DEBUG_CFLAGS)
bin_PROGRAMS = prog10
prog10_SOURCES = prog10.c prog10.h linkedlist.c linkedlist.h logging.c logging.h 
prog10_LDADD = -lncurses
